--- a/fundamentos/bloco06-HTML-CSS-forms-flexbox-responsivo/05-CSS_responsivo-mobile_first/exercise1.css
+++ b/fundamentos/bloco06-HTML-CSS-forms-flexbox-responsivo/05-CSS_responsivo-mobile_first/exercise1.css
@@ -1,14 +1,16 @@
 body {
-
+    font-size: 20px;
+    margin: 5px;
 }
 h1 {
-
+    font-size: 2rem;
 }
 h2 {
 
 }
 
 img {
+    padding: 5px;
     max-width: 100%;
 }
 
